--- a/src/App.css
+++ b/src/App.css
@@ -1,39 +1,39 @@
 .App {
-  text-align: center;
+  font-size: 14px;
+}
+
+.App-header > p {
+  padding: 10px 0 0 0;
+  margin: 0;
+  width: 100%;
+  text-align: left;
 }
 
 .App-logo {
-  height: 40vmin;
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
-  background-color: #282c34;
+  background-color: #feebef;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
   min-width: 100px;
   padding: 10px;
+  color: #444;
+}
+
+.App-settings {
+  padding-top: 10px;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .App-link {
   color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
