--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+body {
+  margin: 0;
+}
+
 .App {
   font-size: 14px;
 }
@@ -23,6 +27,10 @@
   min-width: 100px;
   padding: 10px;
   color: #444;
+}
+
+.App-header--inactive {
+  background-color: #eee;
 }
 
 .App-settings {
