--- a/src/popup/App.css
+++ b/src/popup/App.css
@@ -1,6 +1,9 @@
 body {
   margin: 0;
-  font-family: sans;
+  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
+    'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif,
+    'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+  background-color: #111;
 }
 
 .App {
